- Added unit tests and documentation tests.
- Corrected various errors in the documentation.
- Renamed development.unittest to development.regressiontest. This
  was required for the python doctest to work.
- In development.regressiontest, added new method setLibraryRoot(rootDir)
  to allow running the unit tests from a directory other than the library
  root directory.

Version 1.3.0, October 24, 2013 -- Release 1.3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added class buildingspy.development.validator
  that can be used to validate the html syntax
  of the info section of .mo files.
- Added validation of html syntax to unit test script.
- In io.outputfile, changed name of argument of _init__
  from format to simulator as format is a reserved keyword
  in Python.
- In simulate.Simulator, corrected use of variable that was not defined. 
  Avoided use of variable name exit which is a reserved keyword. 
  Avoided the use of temporary variables that are not needed.
- In development.unittest, 

  - removed non-needed import statement,
  - removed argument dir from method printNumberOfClasses(self)
    as this argument is not used.

- Updated to latest version of DyMat as on https://bitbucket.org/jraedler/dymat/,
  commit 4e819cb
- In development.Tester, method __getSimulationResults(),
  corrected error that caused results only to be stored if there is
  at least one variable requested for comparison that has more than 
  two support points. That is, if a script only requested to store 
  parameters, or variables that solely depend on parameters, 
  then no results from this simulation were not stored.


Version 1.2.0, May 15, 2013 -- Release 1.2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Changed buildingspy.development.unittest so that 
  the string 'svn-id' is no longer searched in, 
  or written to, the reference result files.
- Improved error reporting of the package that runs
  the unit tests.
- Updated buildingspy.development.unittest to allow testing