@@ -15,6 +15,9 @@ Version 1.4.0, xxx, 2013 -- Release 1.4
 - In development.regressiontest, added new method setLibraryRoot(rootDir)
   to allow running the unit tests from a directory other than the library
   root directory.
+- In development.regressiontest, added a test that avoids an IndexError
+  if a new simulation result contains fewer support points than the
+  reference result.
 
 Version 1.3.0, October 24, 2013 -- Release 1.3
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
